Fix email status and stats positions on mobile devices
[MAILPOET-2782]

--- a/assets/css/src/components-plugin/_listing.scss
+++ b/assets/css/src/components-plugin/_listing.scss
@@ -230,6 +230,7 @@ div.mailpoet-listing-bulk-actions-container {
 
     .column-primary {
       float: left !important;
+      padding: 5px 30px 5px 0 !important;
       position: static !important;
     }
 
